// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Editlist/> has a valid snapshot 1`] = `
<div>
  <div
    className="modal"
    id="myModallundefined"
    role="dialog"
  >
    <div
      className="modal-dialog"
    >
      <div
        className="modal-content"
      >
        <div
          className="modal-header"
        >
          <h4>
            Edit List
          </h4>
          <button
            className="close"
            data-dismiss="modal"
            id="closeundefined"
            type="button"
          >
            ×
          </button>
        </div>
        <div
          className="modal-body"
        >
          <form
            className="register-form"
            id="editlist"
            method="POST"
            name="login_form"
            onSubmit={[Function]}
          >
            <div
              className="form-group"
            >
              NEW LIST NAME:
              <input
                className="form-control"
                id="list"
                name="list"
                onChange={[Function]}
                required={true}
                type="text"
                value={undefined}
              />
            </div>
            <button
              className="btn btn-info "
              type="submit"
            >
              Save List
            </button>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Editlist/> renders the edit list form and submits data 1`] = `
<div>
  <div
    className="modal"
    id="myModallundefined"
    role="dialog"
  >
    <div
      className="modal-dialog"
    >
      <div
        className="modal-content"
      >
        <div
          className="modal-header"
        >
          <h4>
            Edit List
          </h4>
          <button
            className="close"
            data-dismiss="modal"
            id="closeundefined"
            type="button"
          >
            ×
          </button>
        </div>
        <div
          className="modal-body"
        >
          <form
            className="register-form"
            id="editlist"
            method="POST"
            name="login_form"
            onSubmit={[Function]}
          >
            <div
              className="form-group"
            >
              NEW LIST NAME:
              <input
                className="form-control"
                id="list"
                name="list"
                onChange={[Function]}
                required={true}
                type="text"
                value="mangoes"
              />
            </div>
            <button
              className="btn btn-info "
              type="submit"
            >
              Save List
            </button>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Editlist/> renders without crashing 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <EditList />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="modal"
        id="myModallundefined"
        role="dialog"
      >
        <div
          className="modal-dialog"
        >
          <div
            className="modal-content"
          >
            <div
              className="modal-header"
            >
              <h4>
                Edit List
              </h4>
              <button
                className="close"
                data-dismiss="modal"
                id="closeundefined"
                type="button"
              >
                ×
              </button>
            </div>
            <div
              className="modal-body"
            >
              <form
                className="register-form"
                id="editlist"
                method="POST"
                name="login_form"
                onSubmit={[Function]}
              >
                <div
                  className="form-group"
                >
                  NEW LIST NAME:
                  <input
                    className="form-control"
                    id="list"
                    name="list"
                    onChange={[Function]}
                    required={true}
                    type="text"
                    value={undefined}
                  />
                </div>
                <button
                  className="btn btn-info "
                  type="submit"
                >
                  Save List
                </button>
              </form>
            </div>
          </div>
        </div>
      </div>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="modal-dialog"
        >
          <div
            className="modal-content"
          >
            <div
              className="modal-header"
            >
              <h4>
                Edit List
              </h4>
              <button
                className="close"
                data-dismiss="modal"
                id="closeundefined"
                type="button"
              >
                ×
              </button>
            </div>
            <div
              className="modal-body"
            >
              <form
                className="register-form"
                id="editlist"
                method="POST"
                name="login_form"
                onSubmit={[Function]}
              >
                <div
                  className="form-group"
                >
                  NEW LIST NAME:
                  <input
                    className="form-control"
                    id="list"
                    name="list"
                    onChange={[Function]}
                    required={true}
                    type="text"
                    value={undefined}
                  />
                </div>
                <button
                  className="btn btn-info "
                  type="submit"
                >
                  Save List
                </button>
              </form>
            </div>
          </div>
        </div>,
        "className": "modal",
        "id": "myModallundefined",
        "role": "dialog",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="modal-content"
          >
            <div
              className="modal-header"
            >
              <h4>
                Edit List
              </h4>
              <button
                className="close"
                data-dismiss="modal"
                id="closeundefined"
                type="button"
              >
                ×
              </button>
            </div>
            <div
              className="modal-body"
            >
              <form
                className="register-form"
                id="editlist"
                method="POST"
                name="login_form"
                onSubmit={[Function]}
              >
                <div
                  className="form-group"
                >
                  NEW LIST NAME:
                  <input
                    className="form-control"
                    id="list"
                    name="list"
                    onChange={[Function]}
                    required={true}
                    type="text"
                    value={undefined}
                  />
                </div>
                <button
                  className="btn btn-info "
                  type="submit"
                >
                  Save List
                </button>
              </form>
            </div>
          </div>,
          "className": "modal-dialog",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="modal-header"
              >
                <h4>
                  Edit List
                </h4>
                <button
                  className="close"
                  data-dismiss="modal"
                  id="closeundefined"
                  type="button"
                >
                  ×
                </button>
              </div>,
              <div
                className="modal-body"
              >
                <form
                  className="register-form"
                  id="editlist"
                  method="POST"
                  name="login_form"
                  onSubmit={[Function]}
                >
                  <div
                    className="form-group"
                  >
                    NEW LIST NAME:
                    <input
                      className="form-control"
                      id="list"
                      name="list"
                      onChange={[Function]}
                      required={true}
                      type="text"
                      value={undefined}
                    />
                  </div>
                  <button
                    className="btn btn-info "
                    type="submit"
                  >
                    Save List
                  </button>
                </form>
              </div>,
            ],
            "className": "modal-content",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <h4>
                    Edit List
                  </h4>,
                  <button
                    className="close"
                    data-dismiss="modal"
                    id="closeundefined"
                    type="button"
                  >
                    ×
                  </button>,
                ],
                "className": "modal-header",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Edit List",
                  },
                  "ref": null,
                  "rendered": "Edit List",
                  "type": "h4",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "×",
                    "className": "close",
                    "data-dismiss": "modal",
                    "id": "closeundefined",
                    "type": "button",
                  },
                  "ref": null,
                  "rendered": "×",
                  "type": "button",
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <form
                  className="register-form"
                  id="editlist"
                  method="POST"
                  name="login_form"
                  onSubmit={[Function]}
                >
                  <div
                    className="form-group"
                  >
                    NEW LIST NAME:
                    <input
                      className="form-control"
                      id="list"
                      name="list"
                      onChange={[Function]}
                      required={true}
                      type="text"
                      value={undefined}
                    />
                  </div>
                  <button
                    className="btn btn-info "
                    type="submit"
                  >
                    Save List
                  </button>
                </form>,
                "className": "modal-body",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <div
                      className="form-group"
                    >
                      NEW LIST NAME:
                      <input
                        className="form-control"
                        id="list"
                        name="list"
                        onChange={[Function]}
                        required={true}
                        type="text"
                        value={undefined}
                      />
                    </div>,
                    <button
                      className="btn btn-info "
                      type="submit"
                    >
                      Save List
                    </button>,
                  ],
                  "className": "register-form",
                  "id": "editlist",
                  "method": "POST",
                  "name": "login_form",
                  "onSubmit": [Function],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": Array [
                        "NEW LIST NAME:",
                        <input
                          className="form-control"
                          id="list"
                          name="list"
                          onChange={[Function]}
                          required={true}
                          type="text"
                          value={undefined}
                        />,
                      ],
                      "className": "form-group",
                    },
                    "ref": null,
                    "rendered": Array [
                      "NEW LIST NAME:",
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "className": "form-control",
                          "id": "list",
                          "name": "list",
                          "onChange": [Function],
                          "required": true,
                          "type": "text",
                          "value": undefined,
                        },
                        "ref": null,
                        "rendered": null,
                        "type": "input",
                      },
                    ],
                    "type": "div",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Save List",
                      "className": "btn btn-info ",
                      "type": "submit",
                    },
                    "ref": null,
                    "rendered": "Save List",
                    "type": "button",
                  },
                ],
                "type": "form",
              },
              "type": "div",
            },
          ],
          "type": "div",
        },
        "type": "div",
      },
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="modal"
          id="myModallundefined"
          role="dialog"
        >
          <div
            className="modal-dialog"
          >
            <div
              className="modal-content"
            >
              <div
                className="modal-header"
              >
                <h4>
                  Edit List
                </h4>
                <button
                  className="close"
                  data-dismiss="modal"
                  id="closeundefined"
                  type="button"
                >
                  ×
                </button>
              </div>
              <div
                className="modal-body"
              >
                <form
                  className="register-form"
                  id="editlist"
                  method="POST"
                  name="login_form"
                  onSubmit={[Function]}
                >
                  <div
                    className="form-group"
                  >
                    NEW LIST NAME:
                    <input
                      className="form-control"
                      id="list"
                      name="list"
                      onChange={[Function]}
                      required={true}
                      type="text"
                      value={undefined}
                    />
                  </div>
                  <button
                    className="btn btn-info "
                    type="submit"
                  >
                    Save List
                  </button>
                </form>
              </div>
            </div>
          </div>
        </div>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="modal-dialog"
          >
            <div
              className="modal-content"
            >
              <div
                className="modal-header"
              >
                <h4>
                  Edit List
                </h4>
                <button
                  className="close"
                  data-dismiss="modal"
                  id="closeundefined"
                  type="button"
                >
                  ×
                </button>
              </div>
              <div
                className="modal-body"
              >
                <form
                  className="register-form"
                  id="editlist"
                  method="POST"
                  name="login_form"
                  onSubmit={[Function]}
                >
                  <div
                    className="form-group"
                  >
                    NEW LIST NAME:
                    <input
                      className="form-control"
                      id="list"
                      name="list"
                      onChange={[Function]}
                      required={true}
                      type="text"
                      value={undefined}
                    />
                  </div>
                  <button
                    className="btn btn-info "
                    type="submit"
                  >
                    Save List
                  </button>
                </form>
              </div>
            </div>
          </div>,
          "className": "modal",
          "id": "myModallundefined",
          "role": "dialog",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="modal-content"
            >
              <div
                className="modal-header"
              >
                <h4>
                  Edit List
                </h4>
                <button
                  className="close"
                  data-dismiss="modal"
                  id="closeundefined"
                  type="button"
                >
                  ×
                </button>
              </div>
              <div
                className="modal-body"
              >
                <form
                  className="register-form"
                  id="editlist"
                  method="POST"
                  name="login_form"
                  onSubmit={[Function]}
                >
                  <div
                    className="form-group"
                  >
                    NEW LIST NAME:
                    <input
                      className="form-control"
                      id="list"
                      name="list"
                      onChange={[Function]}
                      required={true}
                      type="text"
                      value={undefined}
                    />
                  </div>
                  <button
                    className="btn btn-info "
                    type="submit"
                  >
                    Save List
                  </button>
                </form>
              </div>
            </div>,
            "className": "modal-dialog",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <div
                  className="modal-header"
                >
                  <h4>
                    Edit List
                  </h4>
                  <button
                    className="close"
                    data-dismiss="modal"
                    id="closeundefined"
                    type="button"
                  >
                    ×
                  </button>
                </div>,
                <div
                  className="modal-body"
                >
                  <form
                    className="register-form"
                    id="editlist"
                    method="POST"
                    name="login_form"
                    onSubmit={[Function]}
                  >
                    <div
                      className="form-group"
                    >
                      NEW LIST NAME:
                      <input
                        className="form-control"
                        id="list"
                        name="list"
                        onChange={[Function]}
                        required={true}
                        type="text"
                        value={undefined}
                      />
                    </div>
                    <button
                      className="btn btn-info "
                      type="submit"
                    >
                      Save List
                    </button>
                  </form>
                </div>,
              ],
              "className": "modal-content",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <h4>
                      Edit List
                    </h4>,
                    <button
                      className="close"
                      data-dismiss="modal"
                      id="closeundefined"
                      type="button"
                    >
                      ×
                    </button>,
                  ],
                  "className": "modal-header",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Edit List",
                    },
                    "ref": null,
                    "rendered": "Edit List",
                    "type": "h4",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "×",
                      "className": "close",
                      "data-dismiss": "modal",
                      "id": "closeundefined",
                      "type": "button",
                    },
                    "ref": null,
                    "rendered": "×",
                    "type": "button",
                  },
                ],
                "type": "div",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <form
                    className="register-form"
                    id="editlist"
                    method="POST"
                    name="login_form"
                    onSubmit={[Function]}
                  >
                    <div
                      className="form-group"
                    >
                      NEW LIST NAME:
                      <input
                        className="form-control"
                        id="list"
                        name="list"
                        onChange={[Function]}
                        required={true}
                        type="text"
                        value={undefined}
                      />
                    </div>
                    <button
                      className="btn btn-info "
                      type="submit"
                    >
                      Save List
                    </button>
                  </form>,
                  "className": "modal-body",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <div
                        className="form-group"
                      >
                        NEW LIST NAME:
                        <input
                          className="form-control"
                          id="list"
                          name="list"
                          onChange={[Function]}
                          required={true}
                          type="text"
                          value={undefined}
                        />
                      </div>,
                      <button
                        className="btn btn-info "
                        type="submit"
                      >
                        Save List
                      </button>,
                    ],
                    "className": "register-form",
                    "id": "editlist",
                    "method": "POST",
                    "name": "login_form",
                    "onSubmit": [Function],
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": Array [
                          "NEW LIST NAME:",
                          <input
                            className="form-control"
                            id="list"
                            name="list"
                            onChange={[Function]}
                            required={true}
                            type="text"
                            value={undefined}
                          />,
                        ],
                        "className": "form-group",
                      },
                      "ref": null,
                      "rendered": Array [
                        "NEW LIST NAME:",
                        Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "host",
                          "props": Object {
                            "className": "form-control",
                            "id": "list",
                            "name": "list",
                            "onChange": [Function],
                            "required": true,
                            "type": "text",
                            "value": undefined,
                          },
                          "ref": null,
                          "rendered": null,
                          "type": "input",
                        },
                      ],
                      "type": "div",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": "Save List",
                        "className": "btn btn-info ",
                        "type": "submit",
                      },
                      "ref": null,
                      "rendered": "Save List",
                      "type": "button",
                    },
                  ],
                  "type": "form",
                },
                "type": "div",
              },
            ],
            "type": "div",
          },
          "type": "div",
        },
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
